REFACTO: change pojo to be record